tests/fixtures/errors/assign_to_const.gbl
import io;

func main() {
    val x = 10;
    x = 20;  // error: cannot assign to constant
}
